--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-success">
+      <a class="navbar-brand" href="/urls">TinyApp</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/urls">My URLs</a>
+          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+<head>
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -18,6 +41,7 @@
         <h5 class="card-title">TinyURL for: <a href="#"> <%= longURL %></a></h5>
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
+          New Link: <a href="#"> link</a>
         </p>
       </div>
       <div class="card-footer text-muted"></div>
