--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -46,6 +46,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Delete</th>
+            <th scope="col">Edit</th>
           </tr>
         </thead>
         <tbody>
@@ -53,6 +55,8 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td><form method="POST" action="/urls/<%= id %>/delete"><button type="submit" class="btn btn-outline-danger"">Delete</button></form></td>
+              <td><form method="POST" action="/urls/<%= id %>/edit"><button type="submit" class="btn btn-outline-primary">Edit</button></form></td>
             </tr>
           <% } %>
         </tbody>
