--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -44,7 +44,14 @@
           New Link: <a href="#"> link</a>
         </p>
       </div>
-      <div class="card-footer text-muted"></div>
+      <div class="card-footer text-muted">
+      <h5 class="card-title">Edit</h5>
+      <form method="POST" action="/urls/<%= id %>">
+        <label for="longURL">Edit URL:</label>
+        <input type="text" id="longURL" name="longURL" value="<%= longURL %>">
+        <button  class="btn btn-primary" type="submit">Submit</button>
+      </form>
+    </div>
     </div>
     <!-- Bootstrap JS -->
     <script
