--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,6 +17,11 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+      <!-- <div style="flex-grow: 1;"></div> -->
     </div>
+    <form method="POST" action="/login">
+      <input type="text" id="login" name="login">
+      <button  class="btn btn-primary" type="submit">Login</button>
+    </form>
   </nav>
 </header>
