--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -25,7 +25,7 @@
       </div>
       <div class="card-footer text-muted">
       <h5 class="card-title">Edit</h5>
-      <form method="POST" action="/urls/<%= id %>">
+      <form method="POST" action="/urls/<%= id %>/edit">
         <label for="longURL">Edit URL:</label>
         <input type="text" id="longURL" name="longURL" value="<%= longURL %>">
         <button  class="btn btn-primary" type="submit">Submit</button>
