--- a/views/login.ejs
+++ b/views/login.ejs
@@ -44,8 +44,7 @@
         
         </div>
 
-        <input type="submit" class="btn btn-primary" value="login" />
-      </div>
+        <button type="submit" class="btn btn-primary">login</button>
     </form>
 </div>
   </body>
