--- a/views/register.ejs
+++ b/views/register.ejs
@@ -41,11 +41,9 @@
           name="password"
           id="password"
           placeholder="Please enter your password">
-        
         </div>
 
-        <input type="submit" class="btn btn-primary" value="Register" />
-      </div>
+        <button type="submit" class="btn btn-primary" >Register</button>
     </form>
 </div>
   </body>
