--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,15 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -17,15 +10,15 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      </div>
-      <% if (user) {%>
-          logged in as: <%= user.email %>
-            <form method="POST" action="/logout">
-              <button  class="btn btn-danger" type="submit">Logout</button>
-            </form>
+    </div>
+    <% if (user) {%>
+      logged in as: <%= user.email %>
+        <form method="POST" action="/logout">
+          <button class="btn btn-danger" type="submit">Logout</button>
+        </form>
         <% } else { %>
-      <a  href="/login" class="btn btn-primary" >Login</button>
-      <a href="/register" class="btn btn-primary">Register</a>
-    <% } %>
+          <a href="/login" class="btn btn-primary">Login</button>
+            <a href="/register" class="btn btn-primary">Register</a>
+            <% } %>
   </nav>
 </header>
